# MoneyOps

./: .gitignore  ARCHITECTURE_EXPLANATION.md  ENTERPRISE_UPGRADE_GUIDE.md  README.md  TEST_ENDPOINTS.md  TEST_RESULTS.md  babel.json  check_env.py  clear_seeded_data.py  test_api.ps1  test_pattern_match.py
MoneyOps/ai-gateway/: .env.example  .gitignore  .pyre_configuration  Dockerfile  conftest.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_finance_agent.py  test_groq_tts.py  test_out.txt  voice_agent_worker.py
MoneyOps/ai-gateway/app/: config.py  features.py  main.py  voice_processor.py
MoneyOps/ai-gateway/app/adapters/: backend_adapter.py
MoneyOps/ai-gateway/app/agents/: __init__.py  base_agent.py  compliance_agent.py  customer_agent.py  enhanced_finance_agent.py  enhanced_market_agent.py  finance_agent.py  function_calling_agent.py  general_agent.py  growth_agent.py  intelligent_agent.py  intelligent_orchestrator.py  market_agent.py  ner_agent.py  operations_agent.py  orchestrator_agent.py  sales_agent.py  strategy_agent.py
MoneyOps/ai-gateway/app/config/: __init.py__  __init__.py  config.py  features.py
MoneyOps/ai-gateway/app/context/: business_context.py
MoneyOps/ai-gateway/app/integrations/: redis_client.py
MoneyOps/ai-gateway/app/intelligence/: benchmarks.py
MoneyOps/ai-gateway/app/llm/: groq_client.py
MoneyOps/ai-gateway/app/memory/: __init__.py  persistent_memory.py
MoneyOps/ai-gateway/app/models/: draft.py
MoneyOps/ai-gateway/tests/: seed.ps1  test_llm_client.py  test_pipeline_fixes.py  test_voice_gateway_regressions.py
(+544 files in other folders)
